# novel

./: Cargo.toml  README.md
app/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  chapter_0.md  chapter_1.md
export/: Cargo.toml
git/: Cargo.toml
tools/: Cargo.toml
tools/src/: main.rs
