[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
